# mk

./: .gitignore  CMakeLists.txt
command_list/: CMakeLists.txt
command_list/include/abstraction_command/: abstraction_command.h
command_list/include/translate_command/: translate_command.h
command_list/src/: translate_command.cpp
designmode/: CMakeLists.txt
designmode/src/: mk_command_strategy.cpp
mk/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: test.cpp
